--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_order">Order</string>
     <string name="title_add_product">Add product</string>
-    <string name="price">Price</string>
+    <string name="price">100</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
