fix coupon list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_coupon">Coupons</string>
     <string name="title_order">Order</string>
     <string name="title_add_product">Add product</string>
     <string name="price">100</string>
